# vnquant-dataset

./: .gitignore  Cargo.toml  README.md  data.sqlite3
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: dataloader.yaml
config/: exchanges.json
migrations/: 20250626051700_init.sql  20250626103436_fulltext_search.sql  20250626175705_ta_fix.sql  20250626180853_fts_fix.sql
src/: lib.rs
src/finance/: cmd.rs  db.rs  mod.rs  models.rs  ta.rs  utils.rs
src/utils/: format.rs
